adapted to release 1.3